resources/envoy/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      address: 0.0.0.0 # 127.0.0.1
      port_value: 9901

static_resources:
  listeners:
    - name: listener_proxy
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 21001

      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                route_config:
                  name: default
                  virtual_hosts:
                    - name: default
                      domains:
                        - "*"
                      routes: # routes 와 matcher 중 하나만 설정 가능
                        - match:
                            prefix: "/testweb"
                          route:
                            cluster: testweb
                        - match:
                            prefix: "/testapi"
                          route:
                            cluster: testapi
                        - match:
                            prefix: "/testadm"
                          route:
                            cluster: testadm

                http_filters:
                  # https://www.envoyproxy.io/docs/envoy/latest/configuration/http/http_filters/jwt_authn_filter
                  - name: envoy.filters.http.jwt_authn
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.JwtAuthentication
                      providers:
                        jwt_checker:
                          from_headers:
                            - name: Access-Token
                          issuer: inzisoft
                          forward: true
                          payload_in_metadata: auth_payload
                          local_jwks:
                            inline_string: '{
                              "keys": [
                              {
                              "kty" : "oct",
                              "alg" : "HS256",
                              "k"   : "aWJrc0Bpbnppc29mdC5jb20="
                              }
                              ]
                              }'
                      rules:
                        - match: { prefix: /testadm }
                        - match: { prefix: /testweb }
                        - match: { path: /testapi }
                        - match: { path: /testapi/ }
                        - match: { prefix: /testapi/login }
                        - match: { prefix: /testapi/v3/api-docs }
                        - match: { prefix: /testapi/swagger-ui }
                        - match: { prefix: /testapi/swagger-resources }
                        - match: { prefix: /testapi/api/v1/auth }
                        - match: { prefix: /testapi/api/v1/apk }
                        - match: { prefix: /testapi/api/v1/notice/sys }
                        - match: { prefix: /testapi/error }
                        - match: { prefix: /testapi/phone }
                        - match: { prefix: /testapi/user/sub }
                        - match: { prefix: /testapi/mobile/jusoPopup }
                        - match: { prefix: /testapi/ }
                          requires: { provider_name: jwt_checker }
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
    - name: testweb
      connect_timeout: 1s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: testweb
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 61.109.169.71
                      port_value: 31001
    - name: testapi
      connect_timeout: 1s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: testapi
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 61.109.169.71
                      port_value: 31002
    - name: testadm
      connect_timeout: 1s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: testadm
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 61.109.169.71
                      port_value: 31003
