resources/envoy/envoy_dev.yaml
!ignore dynamic_sockets:
  - &admin_address { address: 0.0.0.0, port_value: 9901 }
  - &vpn_listener_address { address: 0.0.0.0, port_value: 21001 }
  - &web_listener_address { address: 0.0.0.0, port_value: 21002 }
  - &eformadm_address { address: 61.109.169.71, port_value: 9303 }
  - &error_address { address: 61.109.169.71, port_value: 31010 }
  - &hysweb_address { address: 61.109.169.71, port_value: 31011 }
  - &hysapi_address { address: 61.109.169.71, port_value: 31012 }
  - &hysadm_address { address: 61.109.169.71, port_value: 31013 }
  - &gitea_address { address: 61.109.169.71, port_value: 9980 }
  - &jenkins_address { address: 61.109.169.71, port_value: 9090 }

admin:
  access_log_path: /applog/admin_access.log
  address:
    socket_address: *admin_address

static_resources:
  listeners:
    - name: vpn_listener
      address:
        socket_address: *vpn_listener_address
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                access_log:
                  - name: envoy.access_loggers.file
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                      path: /applog/remote_access.log
                stat_prefix: ingress_http
                route_config:
                  name: default
                  virtual_hosts:
                    - name: default
                      domains:
                        - "*"
                      routes: # routes 와 matcher 중 하나만 설정 가능
                        - match: { prefix: "/hysadm" } # 운영에서 삭제 필요
                          route: { cluster: hysadm } # 운영에서 삭제 필요
                        - match: { prefix: "/hysweb" }
                          route: { cluster: hysweb }
                        - match: { prefix: "/hysapi" }
                          route: { cluster: hysapi }
                        - match: { prefix: "/error" }
                          route: { cluster: error }
                        - match: { prefix: "/eformadm" }
                          route: { cluster: eformadm }
                        - match: { prefix: "/gitea" }
                          route: { cluster: gitea }
                        - match: { prefix: "/jenkins" }
                          route: { cluster: jenkins }
                        - match: { prefix: "/" }
                          route: { cluster: hysweb }
                http_filters:
                  - name: envoy.filters.http.custom_response
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.custom_response.v3.CustomResponse
                      custom_response_matcher:
                        matcher_list:
                          matchers:
                            - predicate:
                                single_predicate:
                                  input:
                                    name: "401_response"
                                    typed_config:
                                      "@type": type.googleapis.com/envoy.type.matcher.v3.HttpResponseStatusCodeMatchInput
                                  value_match:
                                    exact: "401"
                              on_match:
                                action:
                                  name: action
                                  typed_config:
                                    "@type": type.googleapis.com/envoy.extensions.http.custom_response.redirect_policy.v3.RedirectPolicy
                                    status_code: 200
                                    uri: "http://dfin.qsvc.co.kr:21002/error/4xx/"
                                    response_headers_to_add:
                                      - header:
                                          key: "original_status"
                                          value: "401"
                  - name: envoy.filters.http.jwt_authn
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.JwtAuthentication
                      providers:
                        jwt_checker:
                          from_headers:
                            - name: Access-Token
                          issuer: inzisoft
                          forward: true
                          payload_in_metadata: auth_payload
                          local_jwks:
                            inline_string: '{
                              "keys": [
                              {
                              "kty" : "oct",
                              "alg" : "HS256",
                              "k"   : "aWJrc0Bpbnppc29mdC5jb20="
                              }
                              ]
                              }'
                      rules:
                        - match: { prefix: /hysweb }
                        - match: { path: /hysapi }
                        - match: { path: /hysapi/ }
                        - match: { prefix: /hysapi/login }
                        - match: { prefix: /hysapi/v3/api-docs }
                        - match: { prefix: /hysapi/swagger-ui }
                        - match: { prefix: /hysapi/ }
                          requires: { provider_name: jwt_checker }
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
    - name: web_listener
      address:
        socket_address: *web_listener_address
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                access_log:
                  - name: envoy.access_loggers.file
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                      path: /applog/local_access.log
                stat_prefix: ingress_http
                route_config:
                  name: default
                  virtual_hosts:
                    - name: default
                      domains:
                        - "*"
                      routes: # routes 와 matcher 중 하나만 설정 가능
                        - match: { prefix: "/hysapi" }
                          route: { cluster: hysapi }
                        - match: { prefix: "/hysadm" }
                          route: { cluster: hysadm }
                        - match: { prefix: "/error" }
                          route: { cluster: error }
                        - match: { prefix: "/gitea" }
                          route: { cluster: gitea }
                        - match: { prefix: "/jenkins" }
                          route: { cluster: jenkins }
                        - match: { prefix: "/" }
                          route: { cluster: hysweb }
                http_filters:
                  - name: envoy.filters.http.custom_response
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.custom_response.v3.CustomResponse
                      custom_response_matcher:
                        matcher_list:
                          matchers:
                            - predicate:
                                or_matcher:
                                  predicate:
                                    - single_predicate:
                                        input:
                                          name: "502_response"
                                          typed_config:
                                            "@type": type.googleapis.com/envoy.type.matcher.v3.HttpResponseStatusCodeMatchInput
                                        value_match:
                                          exact: "502"
                                    - single_predicate:
                                        input:
                                          name: "503_response"
                                          typed_config:
                                            "@type": type.googleapis.com/envoy.type.matcher.v3.HttpResponseStatusCodeMatchInput
                                        value_match:
                                          exact: "503"
                                    - single_predicate:
                                        input:
                                          name: "504_response"
                                          typed_config:
                                            "@type": type.googleapis.com/envoy.type.matcher.v3.HttpResponseStatusCodeMatchInput
                                        value_match:
                                          exact: "504"
                              on_match:
                                action:
                                  name: action
                                  typed_config:
                                    "@type": type.googleapis.com/envoy.extensions.http.custom_response.redirect_policy.v3.RedirectPolicy
                                    status_code: 200
                                    uri: "http://dfin.qsvc.co.kr:21001/error/5xx/"
                                    response_headers_to_add:
                                      - header:
                                          key: "original_status"
                                          value: "503"
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: hysweb
      connect_timeout: 1s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: hysweb
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address: *hysweb_address
    - name: hysapi
      connect_timeout: 1s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: hysapi
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address: *hysapi_address
    - name: hysadm
      connect_timeout: 1s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: hysadm
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address: *hysadm_address
    - name: error
      connect_timeout: 1s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: error
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address: *error_address
    - name: eformadm
      connect_timeout: 1s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: eformadm
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address: *eformadm_address
    - name: gitea
      connect_timeout: 1s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: gitea
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address: *gitea_address
    - name: jenkins
      connect_timeout: 1s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: jenkins
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address: *jenkins_address
# single_predicate:
#   input:
#     name: 4xx_response
#     typed_config:
#       "@type": type.googleapis.com/envoy.type.matcher.v3.HttpResponseStatusCodeClassMatchInput
#   value_match:
#     exact: "4xx"
# on_match:
#   action:
#     name: action
#     typed_config:
#       "@type": type.googleapis.com/envoy.extensions.http.custom_response.local_response_policy.v3.LocalResponsePolicy
#       status_code: 499
#       body:
#         inline_string: "not allowed"
#       body_format:
#         json_format:
#           status: "%RESPONSE_CODE%"
#           message: "%LOCAL_REPLY_BODY%"
#       response_headers_to_add:
#         - header:
#             key: "foo"
#             value: "x-bar"
